--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@headlessui/react": "^2.2.7",
     "@heroicons/react": "^2.2.0",
     "class-variance-authority": "^0.7.1",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.540.0",
     "next": "15.4.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
+    "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
     "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1"
