primsa script added in package.json file for build in vercel
Co-Authored-By: mlbench-lhr <206023819+mlbench-lhr@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint",
     "prisma:generate": "prisma generate",
     "prisma:push": "prisma db push",
+    "postinstall": "prisma generate",
     "seed": "node prisma/seed.mjs"
   },
   "dependencies": {
