doctors page done all functionalities working okie
Co-Authored-By: mlbench-lhr <206023819+mlbench-lhr@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@headlessui/react": "^2.2.7",
     "@heroicons/react": "^2.2.0",
     "@prisma/client": "^5.8.0",
+    "antd": "^5.27.2",
     "apexcharts": "^5.3.4",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
