--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
     "swiper": "^11.2.10",
+    "swr": "^2.3.6",
     "tailwind-merge": "^3.3.1",
     "topojson-client": "^3.1.0"
   },
