--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "d3-zoom": "^3.0.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.12",
+    "i18next": "^25.5.2",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.540.0",
     "next": "15.4.5",
@@ -33,6 +36,7 @@
     "react-apexcharts": "^1.7.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
+    "react-i18next": "^15.7.3",
     "react-icons": "^5.5.0",
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
